<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Love, Me and Bill</string>
    <string name="action_settings">Settings</string>
    <string name="use_comedy">Use Comedies</string>
    <string name="use_tragedy">Use Tragedies</string>
    <string name="use_sonnets">Use Sonnets</string>
        
    <string name="clearText">Clear Text</string>
    <string name="hello_world">Hello world!</string>
    <string name="text_hint">Type here</string>
    <string name="hear_from_bill">\nBill\'s Thoughts</string>
    <string name="hear_from_me">\nMy Thoughts</string>
    
    <string name="send_email">send\n email</string>
    <string name="send_sms">send\n sms</string>
    <string name="add_signoff">Add\n Closing</string>
    <string name="signoff">\n\nLove, Me and Bill</string>
    
    <string name="choose_n_prompt">Advanced Settings:\nText Randomness</string>
    
</resources>
