<ViewSwitcher xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:id="@+id/main_view"
    android:background="@drawable/parchment"
    tools:context=".MainActivity" >
     
	  	<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:orientation="vertical">
	        <RelativeLayout
	        android:id="@+id/bac_dim_layoutM"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:background="#C0000000"
	        android:layout_gravity="center"
	        android:visibility="gone" >
	        <ImageView  
	            android:layout_centerInParent="true"
	            android:orientation="vertical"
		        android:id="@+id/blankImageViewM"  
		        android:layout_width="120dp"  
		        android:layout_height="120dp" 
		        android:layout_gravity="center"
		        android:visibility="gone"
		        android:src="@drawable/comedy"/>  
		</RelativeLayout>
	    
	    <EditText
	        android:id = "@+id/main_edittext"
	        android:layout_width="fill_parent"
	        android:layout_height="0dp"
	        android:layout_weight="3"
	        android:hint="@string/text_hint"
	        android:gravity="top"
	        android:textSize="@dimen/text_size"
	        android:inputType="textMultiLine" />
	    
		<Button
	    	    android:id="@+id/hearFromBill"
	    	    style="?android:attr/buttonStyleSmall"
	    	    android:layout_width="match_parent"
	    	    android:layout_height="0dp"
	    	    android:background= "@drawable/quill_nobackground"
	    	    android:layout_weight="1"
	    	    android:gravity="top|center"
	    	    android:text="@string/hear_from_bill"
	    	    android:onClick="turnShakesInputOn"/>
		
		<Spinner 
	   		    android:id="@+id/n_level"
	   		    android:layout_width="fill_parent"
	   		    android:spinnerMode="dialog"
	   		    android:layout_height="wrap_content" />
	   		
	   			<LinearLayout
	   		  		android:id="@+id/set_n_level"
	    	       	android:layout_width="match_parent"
	    			android:layout_height="wrap_content"
	   			 	android:orientation="vertical"></LinearLayout>
		</LinearLayout>
		
	  	<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:orientation="vertical">
	   			
	        <TextView
	        android:id = "@+id/shake_text"
	        android:layout_width="fill_parent"
	        android:layout_height="0dp"
	        android:layout_weight="3"
	        android:textSize="@dimen/text_size"
	        android:hint="@string/text_hint"
	        android:gravity="top" />
			<Button
	    	    android:id="@+id/back_to_me"
	    	    style="?android:attr/buttonStyleSmall"
	    	    android:layout_width="match_parent"
	    	    android:layout_height="0dp"
	    	    android:background= "@drawable/quill_nobackground_rotate"
	    	    android:layout_weight="1"
	    	    android:gravity="top|center"
	    	    android:text="@string/hear_from_me"
	    	    android:onClick="turnShakesInputOff"/>
	</LinearLayout>
</ViewSwitcher>